2010-03-29  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/include/yarp/os/all.h: add RpcClient and
	RpcServer to the standard set of includes.

	* src/libYARP_OS/src/Companion.cpp: allow carriers to be 
	specified either on source or destination port in "yarp
	connect"

2010-03-24 Lorenzo Natale <lorenzo.natale@iit.it>
	* src/libYARP_sig/src/Matrix.cpp
    * src/libYARP_sig/include/yarp/sig/Matrix.h
        Matrix::transposed() is now a const method
        
2010-03-16  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/yarpserver/src/SqliteTripleSource.h: eliminate use of
	unprotected sprintf.
	
	* src/CMakeLists.txt, src/modules/CMakeLists.txt: improve
	dependencies produced by export_library_dependencies on
	Windows when using Visual Studio.

2010-03-09  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/doc/yarp_config_files.dox: start a tutorial on yarp
	config files.

	* src/libYARP_OS/src/Companion.cpp: make it easier to test
	config file parsing with the "yarp resource" command.

2010-02-23 Arjan Gijsberts <arjan@liralab.it>
	* src/libYARP_math/include/yarp/math/Math.h
	* src/libYARP_math/src/math.cpp
	* src/libYARP_math/harness/MathTest.cpp
	Added yarp::math::det to calculate the determinant of a 
	matrix and the related regression test.

2010-02-10 Lorenzo Natale <lorenzo.natale@iit.it>
	* conf/YarpLibraryNames.cmake:
	fixed YARP_INCLUDES, removed $YARP_DIR/include
	added $YARP_DIR/generated_include
	
2010-02-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: fix regression
	in multicast behavior.

2010-02-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/CMakeLists.txt: avoid obscure conflict between
	generated header files and installed header files, when
	install directory is identical to YARP_DIR.

2010-02-01  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: responses to "yarp name"