@@ -20,6 +20,12 @@
 #include <yarp/os/impl/NameserCarrier.h>
 #include <yarp/os/impl/HttpCarrier.h>
 
+#ifdef CREATE_MPI_CARRIER
+// ----------------------------
+//include new MpiCarrier
+#include <yarp/os/impl/MpiCarrier.h>
+#endif
+
 using namespace yarp::os::impl;
 
 
@@ -39,6 +45,12 @@ Carriers::Carriers() {
     delegates.push_back(new UdpCarrier());
     delegates.push_back(new TextCarrier());
     delegates.push_back(new TextCarrier(true));
+
+#ifdef CREATE_MPI_CARRIER
+    // ----------------------------
+    // publish MpiCarrier
+    delegates.push_back(new MpiCarrier());
+#endif
 }
 
 Carriers::~Carriers() {
