@@ -1,3 +1,8 @@
+2010-04-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Carriers.cpp: add experimental MPI
+	carrier from Daniel Krieg (thanks Daniel!)
+
 2010-03-29  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
 
 	* src/libYARP_OS/include/yarp/os/all.h: add RpcClient and
